--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html {
 }
 
 h1 {
-    padding: 1rem;
+    padding: 0 1rem;
     font-size: 2rem;
 }
 
@@ -21,18 +21,18 @@ p {
 
 .title {
     display: inline-block;
-    font-style: italic;
 }
 
 header {
     margin: auto;
-    width: 90%;
-    background-color: gold;
-    border: 3px solid gold;
+    width: 75%;
+    background-color: cornflowerblue;
+    border: 3px solid cornflowerblue;
 }
 
 header nav {
     float: right;
+    padding: 0;
 }
 
 header li {
@@ -40,16 +40,36 @@ header li {
     padding: 0 1rem;
 }
 
+a {
+    font-weight: 700;
+    text-decoration: none;
+    color: black;
+    transition: color 250ms ease;
+}
+
+a:visited {
+    color: black;
+    text-decoration: none;
+}
+
+a:hover {
+    color: gold;
+}
+
 main {
-    width: 90%;
+    width: 75%;
     margin: auto;
     border: 3px solid black;
     min-height: 400px;
 }
 
 footer {
-    width: 90%;
+    width: 75%;
     margin: auto;
-    background-color: gold;
-    border: 3px solid gold;
+    background-color: cornflowerblue;
+    border: 3px solid cornflowerblue;
+}
+
+footer p {
+    float: right;
 }
